fix(mobile/chat-bubbles): Resolve User's chat overlap the GPT's chat menu issue only on mobiles
- Add `z-index` to the very parent element of the model selection menu in GPT chat bubbles to fix overlap issue on mobile

Changes summary:
- Resolved an issue specific to mobile devices where the model selection menu in GPT-4 and GPT-3.5 chat bubbles overlapped with user chat messages. The addition of `z-index` to the parent element (`.agent-turn.relative` class) correctly resolves the layering and ensures a proper user interface.

--- a/src/sass/elements/_right--main.scss
+++ b/src/sass/elements/_right--main.scss
@@ -128,8 +128,6 @@ main [data-testid^='conversation-turn-'] {
 	/* @ RIGHT - CHATS BUBBLES - USER  */
 	&:has([data-message-author-role='user']) {
 		line-height: calc(var(--lineHeight) / 16) !important;
-		// line-height: calc((var(--lineHeight) / 16) * 1px) !important;
-
 
 		/*  RIGHT - CHATS BUBBLE BG */
 		// & > div:first-child > div:first-child {
@@ -147,7 +145,7 @@ main [data-testid^='conversation-turn-'] {
 			align-items: flex-end !important;
 
 			/* Edit icon in User chat */
-			.absolute.bottom-0.right-full.top-0 {
+			.absolute.bottom-0.top-0.right-full {
 				button {
 					background-color: hsla(var(--accent-hsl) / 0.1);
 				}
@@ -196,10 +194,14 @@ main [data-testid^='conversation-turn-'] {
 
 	/* @ RIGHT - CHATS BUBBLES - GPT */
 	&:has([data-message-author-role='assistant']) {
+
+		/* ! Without this there was strange issue with User's chat overlaping the menu for "GPT-4" or "GPT-3.5" to choose model in gpt's chat bubble' footer - ONLY FOR MOBILE which is even more strange!!! */
+		.agent-turn.relative {
+			z-index: 10;
+		}
+
 		.markdown {
-			// line-height: calc((var(--lineHeight) / 16) * 1px) !important;
 			line-height: calc(var(--lineHeight) / 16) !important;
-			// letter-spacing: var(--f-letter-spacing) !important;
 		}
 
 		/*   RIGHT - CHATS BUBBLE BG  */
@@ -208,10 +210,7 @@ main [data-testid^='conversation-turn-'] {
 
 			--pt-multiplier: 1.3;
 			padding: calc(var(--p-chat-bubble) * var(--pt-multiplier)) var(--p-chat-bubble) var(--p-chat-bubble) var(--p-chat-bubble) !important;
-			// padding: var(--p-chat-bubble);
 			border-radius: var(--br-chat-bubble) !important;
-			// letter-spacing: 0.3px;
-			// line-height: 1.8 !important;
 
 			@include dev(mob) {
 				--pt-multiplier: 1.4;
@@ -232,7 +231,6 @@ main [data-testid^='conversation-turn-'] {
 		```    } */
 			/* There are more elements with the same class like the "Tell us more" parent when we click on dislike button in GPT chat */
 			.agent-turn.relative.flex.w-full.flex-col {
-				// border: 2px solid red !important;
 				--svg-w: 2.25rem;
 				--svg-gap: 0.75rem;
 
